--- a/LoanWebApplication/LoanWebApplication/src/app/home/home.component.html
+++ b/LoanWebApplication/LoanWebApplication/src/app/home/home.component.html
@@ -299,8 +299,9 @@
         </div>
     </div>
 </div>
-<script>
+<script src="../assets/js/home.js"></script>
+<!--<script>
     $(function () {
         $('.scroll-pane').jScrollPane();
     });
-</script>
+</script>-->
