--- a/LoanWebApplication/LoanWebApplication/src/app/customerdetail/customerDetail.component.html
+++ b/LoanWebApplication/LoanWebApplication/src/app/customerdetail/customerDetail.component.html
@@ -39,7 +39,7 @@
             </span>
             <div class="page-line-wrap">
                 <a href="#page1" class="page-line"></a>
-                <a href="#page2" class="page-line"></a>
+                <a href="customerdetail#page2" class="page-line"></a>
                 <a href="#page3" class="page-line"></a>
             </div>
         </div>
@@ -165,15 +165,14 @@
             </div>
             <div class="row marB20">
                 <div class="col-sm-12 text-center">
-                    <a href="#page2" class="page-next"> Next<span class="p-next"></span></a>
+                    <a onclick="pageOneNextClick()" class="page-next"> Next<span class="p-next"></span></a>
                 </div>
             </div>
-
         </div>
         <div id="page2" class="hide">
             <div class="row marB20">
                 <div class="col-sm-12 text-center">
-                    <a href="#page1" class="page-prev"> Previous<span class="p-prev"></span></a>
+                    <a onclick="pageTwoPreviousClick()" class="page-prev"> Previous<span class="p-prev"></span></a>
                 </div>
             </div>
             <div class="row marB30">
@@ -250,11 +249,16 @@
                     </div>
                 </div>
             </div>
+            <div class="row marB20">
+                <div class="col-sm-12 text-center">
+                    <a onclick="pageTwoNextClick()" class="page-next"> Next<span class="p-next"></span></a>
+                </div>
+            </div>
         </div>
         <div id="page3" class="hide">
             <div class="row marB20">
                 <div class="col-sm-12 text-center">
-                    <a href="page2"> Previous<span class="p-prev"></span></a>
+                    <a onclick="pageThreePreviousClick()"> Previous<span class="p-prev"></span></a>
                 </div>
             </div>
             <div class="row marB30">
@@ -295,7 +299,8 @@
         </div>
     </div>
 </div>
-
+<script src="../assets/js/customerdetail.js"></script>
+<script src="../assets/js/custom.js"></script>
 <script type="text/javascript">
     $(function () {
         $('#datetimepicker').datetimepicker({
