--- a/LoanWebApplication/LoanWebApplication/src/app/additionaldetail/additionalDetail.component.html
+++ b/LoanWebApplication/LoanWebApplication/src/app/additionaldetail/additionalDetail.component.html
@@ -12,7 +12,7 @@
         <div class="scroller scroller-left"><i class="glyphicon glyphicon-chevron-right"></i></div>
         <div class="scroller scroller-right"><i class="glyphicon glyphicon-chevron-left"></i></div>
     </div>
-    <div class="row marB30">
+    <div class="row marB20">
         <div class="col-sm-6">
             <span class="grey">Additional Details</span>
         </div>
@@ -22,7 +22,7 @@
 
         </div>
     </div>
-    <div class="row marB30">
+    <div class="row marB20">
         <div class="col-sm-4">
             <div class="form-group">
                 <div class="selectdiv">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <div class="row marB30">
+    <div class="row marB20">
         <div class="col-sm-4">
             <div class="form-group">
                 <div class="selectdiv">
@@ -76,8 +76,8 @@
     </div>
     <div class="row marB20">
         <div class="col-sm-12 text-right btn-wrap">
-            <a [routerLink]="['/customerdetail']" class="btn btn-primary">Pervious</a>
-            <a [routerLink]="['/customeridentification']" class="btn btn-primary">Next</a>
+            <button [routerLink]="['/customerdetail']" class="btn btn-primary">Pervious</button>
+            <button [routerLink]="['/customeridentification']" class="btn btn-primary">Next</button>
         </div>
     </div>
 </div>
