--- a/LoanWebApplication/LoanWebApplication/src/app/customeridentification/customerIdentification.component.html
+++ b/LoanWebApplication/LoanWebApplication/src/app/customeridentification/customerIdentification.component.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div id="uploadWrapPage1">
-            <div class="row marB30">
+            <div class="row marB20">
                 <div class="col-sm-6">
                     <div class="upload-wrap">
                         <span class="icon-wrap">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row marB30">
+            <div class="row">
                 <div class="col-sm-4">
                     <div class="row">
                         <div class="col-sm-6">
@@ -105,12 +105,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row marB20">
+            <div class="row">
                 <div class="col-sm-12">
                     <h4>Identification 1</h4>
                 </div>
             </div>
-            <div class="row marB30">
+            <div class="row marB20">
                 <div class="col-sm-4">
                     <div class="row">
                         <div class="col-sm-6">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row marB30">
+            <div class="row marB20">
                 <div class="col-sm-4">
                     <div class="form-group">
                         <div class="selectdiv">
@@ -205,7 +205,7 @@
                     <h4>Identification 2</h4>
                 </div>
             </div>
-            <div class="row marB30">
+            <div class="row marB20">
                 <div class="col-sm-4">
                     <div class="row">
                         <div class="col-sm-6">
@@ -257,7 +257,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row marB30">
+            <div class="row marB20">
                 <div class="col-sm-4">
                     <div class="form-group">
                         <div class="selectdiv">
