Added all screens

--- a/LoanWebApplication/LoanWebApplication/src/app/additionaldetail/additionalDetail.component.html
+++ b/LoanWebApplication/LoanWebApplication/src/app/additionaldetail/additionalDetail.component.html
@@ -3,9 +3,9 @@
 
         <div class="nav-wrapper col-sm-12">
             <ul class="nav nav-tabs list" id="myTab">
-                <li><a href="#"><span class="glyphicon glyphicon-ok-circle"></span> 01 Customer Details</a></li>
+                <li><a [routerLink]="['/customerdetail']"><span class="glyphicon glyphicon-ok-circle"></span> 01 Customer Details</a></li>
                 <li class="active">
-                    <a href="#"><span class="glyphicon glyphicon-ok-circle hide"></span> 02 Additional Details</a>
+                    <a><span class="glyphicon glyphicon-ok-circle hide"></span> 02 Additional Details</a>
                 </li>
             </ul>
         </div>
