--- a/LoanWebApplication/LoanWebApplication/src/app/customerdetail/customerDetail.component.html
+++ b/LoanWebApplication/LoanWebApplication/src/app/customerdetail/customerDetail.component.html
@@ -8,7 +8,7 @@
     <div class="row marB20">
         <div class="nav-wrapper col-sm-12">
             <ul class="nav nav-tabs list" id="myTab">
-                <li class="active"><a href="#"><span class="glyphicon glyphicon-ok-circle hide"></span> 01 Customer Details</a></li>
+                <li class="active"><a><span class="glyphicon glyphicon-ok-circle hide"></span> 01 Customer Details</a></li>
                 <!--
                                     <li ><a href="#"><span class="glyphicon glyphicon-ok-circle hide"></span> 02 Additional Details</a>
                                     </li>
